add linter